<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_app_grey"
            android:layout_centerVertical="true"
            android:id="@+id/imgTatuador"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/Orange_app"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            android:text="@string/name_tatuador"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black_app"
            android:layout_toEndOf="@id/imgTatuador"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCity"
            android:text="@string/city_name"
            android:textSize="16sp"
            android:textColor="@color/Grey_app"
            android:layout_toEndOf="@id/imgTatuador"
            android:layout_below="@+id/tvName"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStyle1"
            android:text="@string/style"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_4"
            android:layout_toEndOf="@id/imgTatuador"
            android:layout_below="@+id/tvCity"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStyle2"
            android:text="@string/style"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_4"
            android:layout_toEndOf="@id/tvStyle1"
            android:layout_below="@+id/tvCity"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tvStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCity"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tvStyle2"
            android:background="@drawable/custom_button_4"
            android:text="@string/style"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>